--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,25 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     overflow: hidden;
-    height: 100vh;
+    height: 100%;
     font-family: "Ubuntu", sans-serif;
 }
 
 video {
-    user-select: none;
+    /* height: 100%; */
+    /* user-select: none; */
     position: absolute;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    object-fit: cover;
+    right: 0;
+    bottom: 0;
+    /* overflow: hidden;
+    object-fit: cover; */
+    z-index: -5;
 }
 
 .container {
@@ -95,4 +101,10 @@ form {
 .temperature {
     font-size: 70px;
     color: #111111;
+}
+
+@media (max-width: 768px) {
+    .box {
+        height: 520px;
+    }
 }
